# object_detection_with_tflite

./: CMakeLists.txt  README.org
src/: main.cpp
